# pedometer-rust-esp32

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml  sdkconfig.defaults
src/: display.rs  main.rs  steps.rs  wifi.rs
