[package]
name = "clockio"
version = "0.1.0"
authors = ["maurogullino@gmail.com"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[[bin]]
name = "clockio"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
esp-idf-hal = "0.43"
esp-idf-sys = "0.34"
embedded-hal = "0.2.7"
embedded-svc = "0.27"
heapless = "0.8"
chrono = "0.4"
embedded-graphics = "0.8"
ssd1306 = "0.8"
anyhow = "1.0"
profont = "0.7"

[build-dependencies]
embuild = "0.31.3"
